--- a/Project.vcxproj
+++ b/Project.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -11,11 +11,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="HuffmanGUI.asm" />
     <MASM Include="HuffmanDataAnalyst.asm" />
+    <MASM Include="HuffmanGUI.asm" />
     <MASM Include="pro2.asm" />
     <MASM Include="Decoder.asm" />
-    <MASM Include="test_runner.asm" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="HuffmanGUI.rc" />
@@ -26,8 +25,10 @@
   <ItemGroup>
     <None Include=".gitignore" />
     <None Include="README.md" />
+    <None Include="test_decompress_simple.bat" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="large_test.txt" />
     <Text Include="test_input.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
