完成多選功能

--- a/Project.vcxproj
+++ b/Project.vcxproj
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
+    <None Include="ACCURATE_FIX_GUIDE.md" />
     <None Include="README.md" />
     <None Include="test_decompress_simple.bat" />
   </ItemGroup>
